--- a/app/views/accounts/_name.html.erb
+++ b/app/views/accounts/_name.html.erb
@@ -1,1 +1,5 @@
-<li><%= name.value %></li>
+<li>
+  <%= name.value %>
+  <%= "," unless name_counter + 1 == last_count  %>
+  <%# There's probably a much better way to do this %>
+</li>
