Changing copy on footer - it's rubycommitters.org, not .com

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -26,7 +26,7 @@
 
         <div id="page-footer">
           <p>
-            RubyCommitters.com
+            RubyCommitters.org
             <span class="seperator"> | </span>
             Design by: <a href="http://twitter.com/fixie">@fixie</a>
             <span class="seperator"> | </span>
