Updated Padrino/Sinatra pair to 0.9.20/1.1.2.

--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -39,4 +39,5 @@ html
             #crowd-footer
             #crowd-footer2
         #crowd-footer-strip
-    == partial 'layouts/google_analytics' if Padrino.env == :production
+    - if Padrino.env == :production
+      == partial 'layouts/google_analytics'
