--- a/app/views/accounts/index.html.erb
+++ b/app/views/accounts/index.html.erb
@@ -5,6 +5,10 @@
   Committers
 </h1>
 
+<p class="intro">
+  This list contain heroes who make best ever programming language named "Ruby".
+<p>
+
 <% @accounts.each_slice(3) do |account_slice| %>
   <table class="commiters">
     <tr class="commiters">
