More air to header; increase body padding

--- a/app/stylesheets/master.sass
+++ b/app/stylesheets/master.sass
@@ -7,6 +7,7 @@ body
   background: url(/images/ruby_pattern.png)
   font-family: Sans
   color: $base
+  padding: 0 40px
 
 h1, h2, h3
   font-family: Cuprum, Sans
@@ -16,7 +17,7 @@ h1, h2
 
 h1
   font-size: 60px
-  padding: 50px 0 30px
+  padding: 80px 0 60px
   color: #a00
   margin-left: 30px
   @include text-shadow(#3e0f10, -1px, 1px, 1px)
@@ -59,8 +60,8 @@ p.intro
   font-family: Cuprum, Sans
   width: 300px
   line-height: 22px
-  top: 58px
-  left: 520px
+  top: 88px
+  left: 560px
   color: #A87175
 
 table.commiters
