Some style tweaks

--- a/app/stylesheets/master.sass
+++ b/app/stylesheets/master.sass
@@ -112,7 +112,7 @@ dl
 
   &.nicknames
     dt, dd
-      display: inline-block
+      //display: inline-block
 
   &.sites
 
@@ -121,14 +121,18 @@ dl
     color: #aaa
     font-size: 15px
     font-family: Cuprum, Sans
-    margin-bottom: 2px
+    margin-bottom: 3px
+
+  dd
+    margin-bottom: 15px
 
   ul
     margin-left: 10px
-    padding: 4px 0
 
     li
       margin-bottom: 5px
+      line-height: 18px
+      font-size: 14px
       list-style: circle
       margin-left: 10px
 
