--- a/app/views/accounts/_account.html.erb
+++ b/app/views/accounts/_account.html.erb
@@ -40,9 +40,14 @@
         <% end %>
 
         <% unless account.services.empty? %>
-          <ul class="services">
-            <%= render :partial => 'service', :collection => account.services %>
-          </ul>
+          <dl class="services">
+            <dt>Services:</dt>
+            <dd>
+              <ul class="services">
+                <%= render :partial => 'service', :collection => account.services %>
+              </ul>
+            </dd>
+          </dl>
         <% end %>
 
         <!-- FIXME: unsure how to link to ISBN. :-( -->
