Move subtitle color to variable

--- a/app/stylesheets/master.sass
+++ b/app/stylesheets/master.sass
@@ -2,6 +2,7 @@
 @import "compass/css3"
 
 $base = #6B5153
+$subtitle = #bbb
 
 body
   background: url(/images/ruby_pattern.png)
@@ -43,7 +44,7 @@ h3
   span
     font-size: 14px
     display: block
-    color: #aaa
+    color: $subtitle
     font-family: Cuprum, Sans
     margin-bottom: 3px
 
@@ -116,7 +117,7 @@ dl
       //display: inline-block
 
   dt
-    color: #aaa
+    color: $subtitle
     font-size: 14px
     font-family: Cuprum, Sans
     margin-bottom: 3px
