Add link to Ruby in title

--- a/app/views/accounts/index.html.erb
+++ b/app/views/accounts/index.html.erb
@@ -6,7 +6,7 @@
 </h1>
 
 <p class="intro">
-  This list contain heroes who make best ever programming language named "Ruby".
+  This list contain heroes who make best ever programming language named "<a href="http://www.ruby-lang.org/" target="_blank">Ruby</a>".
 <p>
 
 <% @accounts.each_slice(3) do |account_slice| %>
