Add icons to nicknames and sites list

--- a/app/stylesheets/master.sass
+++ b/app/stylesheets/master.sass
@@ -113,6 +113,8 @@ dl
   margin-bottom: 8px
 
   &.nicknames
+    dt
+      background: url(/images/nicknames_icon.png) no-repeat
     dt, dd
       //display: inline-block
 
@@ -121,11 +123,16 @@ dl
     font-size: 14px
     font-family: Cuprum, Sans
     margin-bottom: 3px
+    padding-left: 18px
+    padding-top: 1px
 
   dd
     margin-bottom: 15px
 
   &.sites
+
+    dt
+      background: url(/images/sites_icon.png) no-repeat
 
     ul
       margin-left: 10px
